07062013 -> jonnyboy -> added more rss feeds for predb.me
07062013 -> jonnyboy -> fixed patch
						Added threaded requestID for initial pull
07062013 -> Miatrix  -> Added Request ID Lookup.  This looks up requests from the URL we provide to fix naming where possible.  
						This is very usefull for pron, but helps sometimes on tv/movies/console releases.
07062013 -> jonnyboy -> removed remove stale folders from threaded pp additional, wrong place
07052013 -> jonnyboy -> fixed bug in tmux-edit and monitor
						fixed bug in postprocess
						a little cleanup, removed optimize/patch from tmux-edit
						added formatting to numbers in safe backfill
						tmux - split pp addtional and pp nfo
						added partrepair threaded
						added remove stale folders from threaded pp additional
07052013 -> jonnyboy -> really fixed it, updated tmux-edit with an example of the formula used
						fixed issue with safe backfill threaded, not using the correct number of threads
						fixed issue with postprocess threaded nfo
07052013 -> Miatrix  -> Added 2 options to control the video sample to the site edit screen.
						One is segments to download.  If you find your samples arn't long enough you can increase this though it will mean that you
						download more from your usenet provider.
						The other option is the max length (in seconds) for the preview.
						Added 1 option to control the sample image.  When in seconds to try to grab the image.
						Fixed an issue where the same files were listed multiple times in the releasefiles table. This
						was due to the code processing the 1st and last rar file of the archive.
07052013 -> jonnyboy -> updated schema for missing patches
07042013 -> kevin    -> Update the FAQ.
07042013 -> devmem   -> Reverted changes in categorisation and added HD movie check to a.b.movee
						Altered ordering of if() in namefixer to improve efficiency
07042013 -> jonnyboy -> removed nntp lib from pp python script