@@ -1,4 +1,7 @@
-07062013 -> jonnyboy -> added more rss feeds for predb.me
+07072013 -> jonnyboy -> integrated threaded requestID into releases.php, no need to run separate python script
+						fixed testing/nzb-import.php not deleting the nzbs
+						fixed skipping releases when importing by filename
+						added more rss feeds for predb.me
 07062013 -> jonnyboy -> fixed patch
 						Added threaded requestID for initial pull
 07062013 -> Miatrix  -> Added Request ID Lookup.  This looks up requests from the URL we provide to fix naming where possible.  
